--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,9 @@
 {
+  "name": "cspray/telluris",
+  "description": "Helps manage your environment specific configuration and code.",
+  "require": {
+    "php": "5.6.*"
+  },
   "require-dev": {
     "phpunit/phpunit": "4.5.*",
     "adlawson/vfs": "dev-master"
