--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "Helps manage your environment specific configuration and code.",
   "license": "MIT",
   "require": {
-    "php": "5.6.*"
+    "php": "~7.0"
   },
   "require-dev": {
     "phpunit/phpunit": "4.5.*",
